# verlib

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  pyrightconfig.json
src/: jsonrpc.py  verlib.py  verliberr.py
src/integrations/: flask.py
tests/: test_auth.py  test_call.py  test_jsonrpc.py  test_verlib.py
tests/integrations/: test_flask.py
utils/: result.py
verlib/: __init__.py  auth.py  call.py  jsonrpc.py  verlib.py  verliberr.py
verlib/integrations/: __init__.py  flask.py
verlib/src/: jsonrpc.py
verlib/tests/: test_verlib.py
